--- a/notebooks/Data_Loading_and_Cleaning.ipynb
+++ b/notebooks/Data_Loading_and_Cleaning.ipynb
@@ -1,8 +1,181 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "55f807da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os #Facilita a manipulação de caminhos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "db9b5b4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carregado: olist_customers_dataset com 99441 linhas.\n",
+      "Carregado: olist_geolocation_dataset com 1000163 linhas.\n",
+      "Carregado: olist_order_items_dataset com 112650 linhas.\n",
+      "Carregado: olist_order_payments_dataset com 103886 linhas.\n",
+      "Carregado: olist_order_reviews_dataset com 99224 linhas.\n",
+      "Carregado: olist_orders_dataset com 99441 linhas.\n",
+      "Carregado: olist_products_dataset com 32951 linhas.\n",
+      "Carregado: olist_sellers_dataset com 3095 linhas.\n",
+      "Carregado: product_category_name_translation com 71 linhas.\n",
+      "\n",
+      "--- Resultado da Fusão ---\n",
+      "Tabela Mestra Final: 119143 linhas e 37 colunas.\n",
+      "                           order_id                       customer_id  \\\n",
+      "0  e481f51cbdc54678b7cc49136f2d6af7  9ef432eb6251297304e76186b10a928d   \n",
+      "1  e481f51cbdc54678b7cc49136f2d6af7  9ef432eb6251297304e76186b10a928d   \n",
+      "2  e481f51cbdc54678b7cc49136f2d6af7  9ef432eb6251297304e76186b10a928d   \n",
+      "3  53cdb2fc8bc7dce0b6741e2150273451  b0830fb4747a6c6d20dea0b8c802d7ef   \n",
+      "4  47770eb9100c2d0c44946d9cf07ec65d  41ce2a54c0b03bf3443c3d931a367089   \n",
+      "\n",
+      "  order_status order_purchase_timestamp    order_approved_at  \\\n",
+      "0    delivered      2017-10-02 10:56:33  2017-10-02 11:07:15   \n",
+      "1    delivered      2017-10-02 10:56:33  2017-10-02 11:07:15   \n",
+      "2    delivered      2017-10-02 10:56:33  2017-10-02 11:07:15   \n",
+      "3    delivered      2018-07-24 20:41:37  2018-07-26 03:24:27   \n",
+      "4    delivered      2018-08-08 08:38:49  2018-08-08 08:55:23   \n",
+      "\n",
+      "  order_delivered_carrier_date order_delivered_customer_date  \\\n",
+      "0          2017-10-04 19:55:00           2017-10-10 21:25:13   \n",
+      "1          2017-10-04 19:55:00           2017-10-10 21:25:13   \n",
+      "2          2017-10-04 19:55:00           2017-10-10 21:25:13   \n",
+      "3          2018-07-26 14:31:00           2018-08-07 15:27:45   \n",
+      "4          2018-08-08 13:50:00           2018-08-17 18:06:29   \n",
+      "\n",
+      "  order_estimated_delivery_date  order_item_id  \\\n",
+      "0           2017-10-18 00:00:00            1.0   \n",
+      "1           2017-10-18 00:00:00            1.0   \n",
+      "2           2017-10-18 00:00:00            1.0   \n",
+      "3           2018-08-13 00:00:00            1.0   \n",
+      "4           2018-09-04 00:00:00            1.0   \n",
+      "\n",
+      "                         product_id  ... payment_sequential payment_type  \\\n",
+      "0  87285b34884572647811a353c7ac498a  ...                1.0  credit_card   \n",
+      "1  87285b34884572647811a353c7ac498a  ...                3.0      voucher   \n",
+      "2  87285b34884572647811a353c7ac498a  ...                2.0      voucher   \n",
+      "3  595fac2a385ac33a80bd5114aec74eb8  ...                1.0       boleto   \n",
+      "4  aa4383b373c6aca5d8797843e5594415  ...                1.0  credit_card   \n",
+      "\n",
+      "   payment_installments  payment_value                         review_id  \\\n",
+      "0                   1.0          18.12  a54f0611adc9ed256b57ede6b6eb5114   \n",
+      "1                   1.0           2.00  a54f0611adc9ed256b57ede6b6eb5114   \n",
+      "2                   1.0          18.59  a54f0611adc9ed256b57ede6b6eb5114   \n",
+      "3                   1.0         141.46  8d5266042046a06655c8db133d120ba5   \n",
+      "4                   3.0         179.12  e73b67b67587f7644d5bd1a52deb1b01   \n",
+      "\n",
+      "   review_score review_comment_title  \\\n",
+      "0           4.0                  NaN   \n",
+      "1           4.0                  NaN   \n",
+      "2           4.0                  NaN   \n",
+      "3           4.0     Muito boa a loja   \n",
+      "4           5.0                  NaN   \n",
+      "\n",
+      "                              review_comment_message review_creation_date  \\\n",
+      "0  Não testei o produto ainda, mas ele veio corre...  2017-10-11 00:00:00   \n",
+      "1  Não testei o produto ainda, mas ele veio corre...  2017-10-11 00:00:00   \n",
+      "2  Não testei o produto ainda, mas ele veio corre...  2017-10-11 00:00:00   \n",
+      "3                               Muito bom o produto.  2018-08-08 00:00:00   \n",
+      "4                                                NaN  2018-08-18 00:00:00   \n",
+      "\n",
+      "   review_answer_timestamp  \n",
+      "0      2017-10-12 03:43:48  \n",
+      "1      2017-10-12 03:43:48  \n",
+      "2      2017-10-12 03:43:48  \n",
+      "3      2018-08-08 18:37:50  \n",
+      "4      2018-08-22 19:07:58  \n",
+      "\n",
+      "[5 rows x 37 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Definição do caminho base para os dados brutos\n",
+    "data_dir = '../data/raw/'\n",
+    "\n",
+    "#Dicionário para armazenar os Dataframes\n",
+    "data = {}\n",
+    "\n",
+    "files = [\n",
+    "    'olist_customers_dataset.csv',\n",
+    "    'olist_geolocation_dataset.csv',\n",
+    "    'olist_order_items_dataset.csv',\n",
+    "    'olist_order_payments_dataset.csv',\n",
+    "    'olist_order_reviews_dataset.csv',\n",
+    "    'olist_orders_dataset.csv',\n",
+    "    'olist_products_dataset.csv',\n",
+    "    'olist_sellers_dataset.csv',\n",
+    "    'product_category_name_translation.csv'\n",
+    "]\n",
+    "\n",
+    "#Loop para carregar cada arquivo\n",
+    "for file in files:\n",
+    "    file_path = os.path.join(data_dir, file)\n",
+    "    df_name = file.replace('.csv', '')\n",
+    "    data[df_name] = pd.read_csv(file_path)\n",
+    "    print(f\"Carregado: {df_name} com {data[df_name].shape[0]} linhas.\")\n",
+    "\n",
+    "#Execução das fusões (merge)\n",
+    "\n",
+    "#Tabela principal com Pedidos e Itens\n",
+    "df_main = data['olist_orders_dataset'].merge(\n",
+    "    data['olist_order_items_dataset'],\n",
+    "    on='order_id',\n",
+    "    how='left'\n",
+    ")\n",
+    "\n",
+    "#Juntando a tabela principal com Clientes\n",
+    "df_main = df_main.merge(\n",
+    "    data['olist_customers_dataset'],\n",
+    "    on='customer_id',\n",
+    "    how='left'\n",
+    ")\n",
+    "\n",
+    "#Juntando a tabela principal com Produtos e Tradução\n",
+    "df_main = df_main.merge(\n",
+    "    data['olist_products_dataset'],\n",
+    "    on='product_id',\n",
+    "    how='left'\n",
+    ")\n",
+    "df_main = df_main.merge(\n",
+    "    data['product_category_name_translation'],\n",
+    "    on='product_category_name',\n",
+    "    how='left'\n",
+    ")\n",
+    "\n",
+    "#Pagamento e Avaliações\n",
+    "df_main = df_main.merge(\n",
+    "    data['olist_order_payments_dataset'],\n",
+    "    on='order_id',\n",
+    "    how='left'\n",
+    ")\n",
+    "df_main = df_main.merge(\n",
+    "    data['olist_order_reviews_dataset'],\n",
+    "    on='order_id',\n",
+    "    how='left'\n",
+    ")\n",
+    "\n",
+    "print(f\"\\n--- Resultado da Fusão ---\")\n",
+    "print(f\"Tabela Mestra Final: {df_main.shape[0]} linhas e {df_main.shape[1]} colunas.\")\n",
+    "print(df_main.head())"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
