Foi feita a limpeza dos dados e a feature engineering

--- a/notebooks/Data_Loading_and_Cleaning.ipynb
+++ b/notebooks/Data_Loading_and_Cleaning.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "db9b5b4f",
    "metadata": {},
    "outputs": [
@@ -170,6 +170,194 @@
     "print(f\"\\n--- Resultado da Fusão ---\")\n",
     "print(f\"Tabela Mestra Final: {df_main.shape[0]} linhas e {df_main.shape[1]} colunas.\")\n",
     "print(df_main.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e87d4d1",
+   "metadata": {},
+   "source": [
+    "**Fase 1, Parte 2: Limpeza de Dados e Feature Engineering**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdbf53c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COnversão de datas concluídas\n",
+      "order_purchase_timestamp         datetime64[ns]\n",
+      "order_approved_at                datetime64[ns]\n",
+      "order_delivered_carrier_date     datetime64[ns]\n",
+      "order_delivered_customer_date    datetime64[ns]\n",
+      "order_estimated_delivery_date    datetime64[ns]\n",
+      "review_creation_date             datetime64[ns]\n",
+      "review_answer_timestamp          datetime64[ns]\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Convertendo os tipos de dados (Datas)\n",
+    "date_cols = [\n",
+    "    'order_purchase_timestamp',\n",
+    "    'order_approved_at',\n",
+    "    'order_delivered_carrier_date',\n",
+    "    'order_delivered_customer_date',\n",
+    "    'order_estimated_delivery_date',\n",
+    "    'review_creation_date',\n",
+    "    'review_answer_timestamp'\n",
+    "]\n",
+    "\n",
+    "for col in date_cols:\n",
+    "    df_main[col] = pd.to_datetime(df_main[col], errors='coerce')\n",
+    "\n",
+    "print(\"COnversão de datas concluídas\")\n",
+    "print(df_main[date_cols].dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "21058cd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contagem de Nulos nas Colunas de Data\n",
+      "order_delivered_customer_date    3421\n",
+      "order_delivered_carrier_date     2086\n",
+      "review_creation_date              997\n",
+      "review_answer_timestamp           997\n",
+      "order_approved_at                 177\n",
+      "order_purchase_timestamp            0\n",
+      "order_estimated_delivery_date       0\n",
+      "dtype: int64\n",
+      "Porcentagem de Nulos nas Colunas de Data\n",
+      "order_delivered_customer_date    2.87\n",
+      "order_delivered_carrier_date     1.75\n",
+      "review_creation_date             0.84\n",
+      "review_answer_timestamp          0.84\n",
+      "order_approved_at                0.15\n",
+      "order_purchase_timestamp         0.00\n",
+      "order_estimated_delivery_date    0.00\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tratamento de Valores Nulos -> NaN ou NaT\n",
+    "null_counts = df_main[date_cols].isnull().sum()\n",
+    "null_percent = (null_counts / df_main.shape[0]) * 100\n",
+    "\n",
+    "print(\"Contagem de Nulos nas Colunas de Data\")\n",
+    "print(null_counts.sort_values(ascending=False).round(2))\n",
+    "print(\"Porcentagem de Nulos nas Colunas de Data\")\n",
+    "print(null_percent.sort_values(ascending=False).round(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "52ccb773",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Preenchimento de categorias nulas\n",
+    "df_main['product_category_name_english'].fillna('no_category', inplace=True)\n",
+    "\n",
+    "#Limpeza das linhas onde \"order_id\" ou \"customer_id\" estiver nulo\n",
+    "df_main.dropna(subset=['order_id', 'customer_id'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "366f3dda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Analise Temporal\n",
+    "df_main['purchase_year'] = df_main['order_purchase_timestamp'].dt.year\n",
+    "df_main['purchase_month'] = df_main['order_purchase_timestamp'].dt.to_period('M')\n",
+    "df_main['purchase_dayofweek'] = df_main['order_purchase_timestamp'].dt.day_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b67f1763",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Métricas de Entregas (KPIs)\n",
+    "# - Tempo real de entrega (Em dias)\n",
+    "df_main['delivery_lead_time_days'] = (\n",
+    "    df_main['order_delivered_customer_date'] - df_main['order_purchase_timestamp']\n",
+    ").dt.days\n",
+    "\n",
+    "# - Diferença entre a data de entrega e a data estimada (Perfomance de Logistica)\n",
+    "df_main['delivery_vs_estimated'] = (\n",
+    "    df_main['order_delivered_customer_date'] - df_main['order_estimated_delivery_date']\n",
+    ").dt.days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9635879",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                               order_id  total_order_price  \\\n",
+      "0      00010242fe8c5a6d1ba2dd792cb16214              58.90   \n",
+      "1      00018f77f2f0320c557190d7a144bdd3             239.90   \n",
+      "2      000229ec398224ef6ca0657da4fc703e             199.00   \n",
+      "3      00024acbcdf0a6daa1e931b038114c75              12.99   \n",
+      "4      00042b26cf59d7ce69dfabb4e55b4fd9             199.90   \n",
+      "...                                 ...                ...   \n",
+      "99436  fffc94f6ce00a00581880bf54a75a037             299.99   \n",
+      "99437  fffcd46ef2263f404302a634eb57f7eb             350.00   \n",
+      "99438  fffce4705a9662cd70adb13d4a31832d              99.90   \n",
+      "99439  fffe18544ffabc95dfada21779c9644f              55.99   \n",
+      "99440  fffe41c64501cc87c801fd61db3f6244              43.00   \n",
+      "\n",
+      "       total_order_freight order_status  Total_Revenue  \n",
+      "0                    13.29    delivered          72.19  \n",
+      "1                    19.93    delivered         259.83  \n",
+      "2                    17.87    delivered         216.87  \n",
+      "3                    12.79    delivered          25.78  \n",
+      "4                    18.14    delivered         218.04  \n",
+      "...                    ...          ...            ...  \n",
+      "99436                43.41    delivered         343.40  \n",
+      "99437                36.53    delivered         386.53  \n",
+      "99438                16.95    delivered         116.85  \n",
+      "99439                 8.72    delivered          64.71  \n",
+      "99440                12.79    delivered          55.79  \n",
+      "\n",
+      "[99441 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Aqui vou fazer uma tabela agregada para Pagamentos/Receita no nível do pedido\n",
+    "df_revenue = df_main.groupby('order_id').agg(\n",
+    "    total_order_price=('price', 'sum'),\n",
+    "    total_order_freight=('freight_value', 'sum'),\n",
+    "    order_status=('order_status', 'first')\n",
+    ").reset_index()\n",
+    "\n",
+    "df_revenue['Total_Revenue'] = df_revenue['total_order_price'] + df_revenue['total_order_freight']\n"
    ]
   }
  ],
